[gd_scene load_steps=13 format=3 uid="uid://qvxb24kyh4pu"]

[ext_resource type="Script" path="res://background.gd" id="1_gwj4p"]
[ext_resource type="Texture2D" uid="uid://cg5c63sp5a75u" path="res://Assets/Graphics/bg1.png" id="2_rc4at"]
[ext_resource type="Texture2D" uid="uid://bp4hnv1jrobst" path="res://Assets/Graphics/bg1b.png" id="3_qdcue"]
[ext_resource type="Texture2D" uid="uid://ls6pinhlv18n" path="res://Assets/Graphics/bg1a.png" id="5_sn8j5"]

[sub_resource type="Animation" id="Animation_03oew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_b:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/bg/bg_a:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/bg/bg_main:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vh0kr"]
resource_name = "bg_a_hide"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_a:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qlg7v"]
resource_name = "bg_a_show"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_a:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rihoq"]
resource_name = "bg_b_hide"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_b:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_w6w7v"]
resource_name = "bg_b_show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_b:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_70ixk"]
resource_name = "bg_hide"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_main:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hukmv"]
resource_name = "bg_show"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/bg/bg_main:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u4m3j"]
_data = {
"RESET": SubResource("Animation_03oew"),
"bg_a_hide": SubResource("Animation_vh0kr"),
"bg_a_show": SubResource("Animation_qlg7v"),
"bg_b_hide": SubResource("Animation_rihoq"),
"bg_b_show": SubResource("Animation_w6w7v"),
"bg_hide": SubResource("Animation_70ixk"),
"bg_show": SubResource("Animation_hukmv")
}

[node name="background" type="Node2D"]
z_index = -10
script = ExtResource("1_gwj4p")

[node name="bg_transition" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_u4m3j")
}

[node name="bg_transition_buffer_delay" type="Timer" parent="bg_transition"]
unique_name_in_owner = true
one_shot = true

[node name="bg_a_transition" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_u4m3j")
}

[node name="bg_b_transition" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_u4m3j")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="bg" type="ParallaxBackground" parent="CanvasLayer"]
scroll_ignore_camera_zoom = true

[node name="bg_main" type="ParallaxLayer" parent="CanvasLayer/bg"]
texture_repeat = 3
motion_scale = Vector2(0.75, 0.1)
motion_mirroring = Vector2(1920, 0)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/bg/bg_main"]
offset_top = -900.0
offset_right = 1920.0
offset_bottom = 1440.0
texture = ExtResource("2_rc4at")

[node name="bg_b" type="ParallaxLayer" parent="CanvasLayer/bg"]
texture_repeat = 3
motion_scale = Vector2(0.85, 0.4)
motion_mirroring = Vector2(2560, 0)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/bg/bg_b"]
modulate = Color(1, 1, 1, 0.235294)
texture_repeat = 3
offset_top = 320.0
offset_right = 2560.0
offset_bottom = 1180.0
texture = ExtResource("3_qdcue")

[node name="bg_a" type="ParallaxLayer" parent="CanvasLayer/bg"]
texture_repeat = 3
motion_scale = Vector2(0.95, 0.5)
motion_mirroring = Vector2(1920, 0)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/bg/bg_a"]
texture_repeat = 3
offset_top = 320.0
offset_right = 1920.0
offset_bottom = 1180.0
texture = ExtResource("5_sn8j5")

[connection signal="animation_finished" from="bg_transition" to="." method="_on_bg_transition_animation_finished"]
[connection signal="timeout" from="bg_transition/bg_transition_buffer_delay" to="." method="_on_bg_transition_buffer_delay_timeout"]
[connection signal="animation_finished" from="bg_a_transition" to="." method="_on_bg_transition_animation_finished"]
[connection signal="animation_finished" from="bg_b_transition" to="." method="_on_bg_transition_animation_finished"]
